# kpo

./: .clang-format  .gitignore  CMakeLists.txt  make_build.sh
client/: CMakeLists.txt
client/src/: client.cpp  client.h  main.cpp
client/src/network/: session.h
client/src/network/impl/: unix_sock_session.cpp  unix_sock_session.h
client/src/user_io/: io_iface.h
client/src/user_io/impl/: console_io.cpp  console_io.h
client/test/: main.cpp
scripts/: format_all_files.py  install_git_hooks.py
scripts/githooks/: pre-commit
server/: CMakeLists.txt
server/src/: main.cpp
